--- a/styles/global.css
+++ b/styles/global.css
@@ -8,6 +8,8 @@ body {
   width: 1100px;
   margin: 0 auto;
   font-family: Raleway, sans-serif;
+  background-color: #fff;
+  color: #000;
 }
 
 h1,
@@ -27,12 +29,32 @@ blockquote {
 
 a {
   color: inherit;
+  text-decoration: none;
 }
 
 img {
   width: 100%;
+  display: block;
 }
 
 button {
   font: inherit;
+  font-size: inherit;
+  color: inherit;
+  background: none;
+  border: none;
+  cursor: pointer;
+}
+
+ul {
+  list-style: none;
+}
+
+address {
+  font-style: normal;
+  line-height: 135%;
+}
+
+html {
+  scroll-behavior: smooth;
 }
