--- a/styles/global.css
+++ b/styles/global.css
@@ -6,6 +6,7 @@
 
 body {
   width: 1100px;
+  min-width: 1100px;
   margin: 0 auto;
   font-family: Raleway, sans-serif;
   background-color: #fff;
@@ -33,8 +34,11 @@ a {
 }
 
 img {
-  width: 100%;
-  display: block;
+  /* width: 100%;
+  display: block; */
+  width: 148px;
+  height: 105px;
+  flex-shrink: 0;
 }
 
 button {
