--- a/styles/style.css
+++ b/styles/style.css
@@ -2,7 +2,7 @@
   display: grid;
   grid-template-columns: 1fr min-content 1fr;
   align-items: center;
-  padding: 92px 50px 96px 50px;
+  padding: 92px 50px 103px 50px;
 }
 
 .header__link {
@@ -13,7 +13,7 @@
 .header__links-list {
   display: flex;
   font-size: 18px;
-  gap: 34px;
+  gap: 32px;
   list-style: circle;
 }
 
@@ -48,7 +48,7 @@
   background-size: cover;
   background-position: center;
   color: #fff;
-  padding: 165px 50px 50px;
+  padding: 165px 50px 50px 50px;
 }
 
 .overlay {
@@ -59,27 +59,30 @@
 }
 
 .cover__title {
+  font-size: 100px;
+  line-height: 1;
+  text-transform: uppercase;
+  letter-spacing: normal;
+  margin-bottom: 106px;
   position: relative;
   z-index: 2;
-  font-size: 100px;
-  line-height: 115%;
   letter-spacing: 30px;
-  text-transform: uppercase;
-  display: flex;
-  flex-direction: column;
-  gap: 5px;
 }
 
 .aligned-text {
   display: block;
+  width: 100%;
+  margin-bottom: 30px;
 }
 
 .aligned-text_center {
   text-align: center;
+  padding: 5px 0px 0px 28px;
 }
 
 .aligned-text_right {
   text-align: right;
+  padding: 5px 0px 0px 28px;
 }
 
 .no-letter-spacing {
@@ -92,7 +95,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-top: 135px;
+  margin-top: 116px;
 }
 
 .cover__description-text {
@@ -110,7 +113,7 @@
 }
 
 .lots {
-  padding: 180px 24px 0;
+  padding: 178px 24px 0;
 }
 
 .lots__heading {
@@ -122,6 +125,7 @@
 
 .lots__card-list {
   display: flex;
+  flex-wrap: wrap;
   gap: 25px;
   margin-bottom: 30px;
 }
@@ -141,7 +145,7 @@
   flex-direction: column;
   justify-content: space-between;
   height: 100%;
-  padding: 50px 40px;
+  padding: 48px 38px;
   color: #fff;
   background-size: cover;
   background-position: center;
@@ -178,7 +182,7 @@
 
 .lots__look-more-link {
   display: block;
-  padding-left: 40px;
+  padding-left: 38px;
   font-size: 20px;
   text-decoration: underline;
   text-underline-offset: 5px;
@@ -199,17 +203,18 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 35px auto;
+  margin: 35px 45px;
 }
 
 .about__logo-image {
   width: 148px;
+  height: 114px;
 }
 
 .about__title {
   font-size: 40px;
   text-transform: uppercase;
-  margin: 70px 0 0 0;
+  margin: 78px 0 0 -10px;
 }
 
 .about__column_right {
@@ -226,7 +231,7 @@
 .about__text {
   line-height: 1.2;
   font-size: 20px;
-  margin: 40px 0 0 0;
+  margin: 42px 0 0 -10px;
 }
 
 .about__text p + p {
